# NN

./: .gitignore  CMakeLists.txt  README.md
include/: Activator.hpp  Layer.hpp  Loss.hpp  Model.hpp  Network.hpp  Optimizer.hpp  Regulator.hpp
src/: Activator.cpp  Layer.cpp  Loss.cpp  MnistLoader.cpp  Network.cpp  main.cpp  trainer.cpp
src/Optimizers/: Adadelta.cpp  Adagrad.cpp  Adam.cpp  Momentum.cpp  RMSProp.cpp
src/Regulators/: BatchNorm.cpp  Dropout.cpp  RegManager.cpp
test/: test_dense_layer.cpp  test_layer.cpp
